@startuml
!theme toy

package Runic <<rectangle>> {
  package Core <<folder>> {
    class Main <<Artifact>> {
      {static} {abstract} CreateApplication(): unique_ptr<Application>
    }

    hide <<Artifact>> circle
    hide <<Artifact>> fields

    struct AppData

    class Application

    Main *- Application
    AppData .. (Main, Application)

    struct WindowData

    class Window

    Application -> Window : constructs
    WindowData .. (Application, Window)

    class Log

    Application -up-> Log : initializes

    class Input

    class EventDispatcher

    Application *-- EventDispatcher

    class Layer

    Layer *-- EventDispatcher

    class LayerManager

    LayerManager o-- "0..*" Layer
    Application *-- LayerManager

    LayerManager -[hidden]left- Event
    LayerManager -[hidden]right- Input
  }

  ' Renderer -------------------------------------------------------------------

  package Renderer {
    class Renderer

    Application *- Renderer

    class GraphicsContext

    GraphicsContext *- Window

    Renderer *-left- GraphicsContext
    Application -> GraphicsContext : constructs

    class VertexArray

    struct VertexAttribute

    Renderer -> VertexArray : constructs
    VertexAttribute . (Renderer, VertexArray)

    abstract class Buffer
    class VertexBuffer
    class IndexBuffer

    Buffer <|-- VertexBuffer
    Buffer <|-- IndexBuffer

    Renderer --> Buffer : constructs

    class Mesh

    Mesh -left-> ShaderProgram
    Mesh *-down- VertexArray

    class ShaderManager

    class ShaderProgram

    Renderer -up-> Shader : constructs
    Renderer -up-> ShaderProgram : constructs

    ShaderProgram "0..*" -o ShaderManager

    class Shader

    ShaderProgram -left-> Shader
  }
}

hide empty members

@enduml
